--- a/examples/webgl_materials_standard_nodes.html
+++ b/examples/webgl_materials_standard_nodes.html
@@ -82,7 +82,9 @@
 					.setPath( 'models/obj/cerberus/' )
 					.load( 'Cerberus.obj', function ( group ) {
 
-						const loader = new THREE.TextureLoader()
+						const loaderManager = new THREE.LoadingManager();
+
+						const loader = new THREE.TextureLoader( loaderManager )
 							.setPath( 'models/obj/cerberus/' );
 
 						const diffuseMap = loader.load( 'Cerberus_A.jpg' );
@@ -97,7 +99,7 @@
 
 						const mpMapNode = new Nodes.TextureNode( rmMap );
 
-						material.colorNode = new Nodes.OperatorNode( '*', new Nodes.TextureNode( diffuseMap ), new Nodes.Vector3Node( material.color ) );
+						material.colorNode = new Nodes.OperatorNode( '*', new Nodes.TextureNode( diffuseMap ), new Nodes.ColorNode( material.color ) );
 
 						// roughness is in G channel, metalness is in B channel
 						material.roughnessNode = new Nodes.SplitNode( mpMapNode, 'g' );
@@ -117,7 +119,29 @@
 
 						group.position.x = - 0.45;
 						group.rotation.y = - Math.PI / 2;
-						scene.add( group );
+						//scene.add( group );
+
+						// TODO: Serialization test
+
+						loaderManager.onLoad = () => {
+
+							const groupJSON = JSON.stringify( group.toJSON() );
+
+							const objectLoader = new Nodes.NodeObjectLoader();
+							objectLoader.parse( JSON.parse( groupJSON ), ( newGroup ) => {
+
+								//scene.remove( group );
+
+								newGroup.position.copy( group.position );
+								newGroup.rotation.copy( group.rotation );
+
+								scene.add( newGroup );
+
+								console.log( 'Serialized!' );
+
+							} );
+
+						};
 
 					} );
 
