--- a/examples/webxr_vr_haptics.html
+++ b/examples/webxr_vr_haptics.html
@@ -41,9 +41,9 @@
 			const oscillators = [];
 			let controls, group;
 			let audioCtx = null;
-			// minor pentatonic scale, so whichever notes is striked would be more pleasant
-			const musicScale = [ 0, 3, 5, 7, 10, 12, 15, 17, 19, 22, ];
 
+			// minor pentatonic scale, so whichever notes is striked would be more pleasant
+			const musicScale = [ 0, 3, 5, 7, 10, 12 ];
 
 			init();
 			animate();
@@ -59,8 +59,9 @@
 				audioCtx = new ( window.AudioContext || window.webkitAudioContext )();
 				function createOscillator() {
 
-					// use a sine oscillator
+					// creates oscillator
 					const oscillator = audioCtx.createOscillator();
+					oscillator.type = 'sine'; // possible values: sine, triangle, square
 					oscillator.start();
 					return oscillator;
 
@@ -263,7 +264,8 @@
 
 							}
 
-							oscillators[ g ].frequency.value = 110 * Math.pow( 2, musicScale[ child.userData.index ] / 12 );
+							const musicInterval = musicScale[ child.userData.index % musicScale.length ] + 12 * Math.floor( child.userData.index / musicScale.length );
+							oscillators[ g ].frequency.value = 110 * Math.pow( 2, musicInterval / 12 );
 							controller.colliding = true;
 							group.children[ i ].collided = true;
 
