--- a/examples/webgl_nodes_playground.html
+++ b/examples/webgl_nodes_playground.html
@@ -42,7 +42,8 @@
 	<script type="importmap">
 	{
 		"imports": {
-			"three": "../build/three.module.js"
+			"three": "../build/three.module.js",
+			"three/addons/": "./jsm/"
 		}
 	}
 	</script>
