--- a/examples/webgl2_rendertarget_texture2darray.html
+++ b/examples/webgl2_rendertarget_texture2darray.html
@@ -138,10 +138,8 @@
 			const postProcessScene = new THREE.Scene();
 			const postProcessCamera = new THREE.OrthographicCamera( - 1, 1, 1, - 1, 0, 1 );
 
-			const renderTarget = new THREE.WebGLArrayRenderTarget( DIMENSIONS.width, DIMENSIONS.height, DIMENSIONS.depth, {
-				format: THREE.RedFormat,
-				type: THREE.UnsignedByteType
-			} );
+			const renderTarget = new THREE.WebGLArrayRenderTarget( DIMENSIONS.width, DIMENSIONS.height, DIMENSIONS.depth );
+			renderTarget.texture.format = THREE.RedFormat;
 
 			const postProcessMaterial = new THREE.ShaderMaterial( {
 				uniforms: {
