--- a/examples/webgl_geometry_text.html
+++ b/examples/webgl_geometry_text.html
@@ -108,7 +108,7 @@
 			function decimalToHex( d ) {
 
 				let hex = Number( d ).toString( 16 );
-				hex = '000000'.substr( 0, 6 - hex.length ) + hex;
+				hex = '000000'.substring( 0, 6 - hex.length ) + hex;
 				return hex.toUpperCase();
 
 			}
@@ -145,7 +145,7 @@
 
 				// Get text from hash
 
-				const hash = document.location.hash.substr( 1 );
+				const hash = document.location.hash.slice( 1 );
 
 				if ( hash.length !== 0 ) {
 
