--- a/manual/index.html
+++ b/manual/index.html
@@ -310,7 +310,7 @@
 
 			const hash = location.hash;
 			if ( hash === '' ) return;
-			const docLink = hash.substr( hash.indexOf( '/' ) );
+			const docLink = hash.slice( hash.indexOf( '/' ) );
 			location.href = '#' + language + docLink;
 
 		}
@@ -323,7 +323,7 @@
 
 			if ( search.indexOf( '?q=' ) !== - 1 ) {
 
-				return decodeURI( search.substr( 3 ) );
+				return decodeURI( search.slice( 3 ) );
 
 			}
 
@@ -428,7 +428,7 @@
 
 			if ( url.origin === window.location.origin ) {
 
-				const hrefNoOrigin = url.href.substr( url.origin.length );
+				const hrefNoOrigin = url.href.slice( url.origin.length );
 				const m = re.exec( hrefNoOrigin );
 				const [ , base, path ] = m;
 				if ( base.includes( 'manual' ) ) {
@@ -495,8 +495,8 @@
 				const subHash = splitHash[0].indexOf('#');
 				let src;
 				if (subHash >= 0) {
-					const beforeSubHash = splitHash[0].substr(0, subHash);
-					const afterSubHash = splitHash[0].substr(subHash);
+					const beforeSubHash = splitHash[0].slice(0, subHash);
+					const afterSubHash = splitHash[0].slice(subHash);
 					src = `${beforeSubHash}.html${afterSubHash}${splitHash[ 1 ]}`;
 				} else {
 					src = splitHash[ 0 ] + '.html' + splitHash[ 1 ];
