--- a/manual/ja/post-processing-3dlut.html
+++ b/manual/ja/post-processing-3dlut.html
@@ -424,7 +424,7 @@ dragAndDrop.onDropFile(readLUTFile);
 
 function ext(s) {
   const period = s.lastIndexOf('.');
-  return s.substr(period + 1);
+  return s.slice(period + 1);
 }
 
 function readLUTFile(file) {
