--- a/examples/webgl_loader_svg.html
+++ b/examples/webgl_loader_svg.html
@@ -114,6 +114,7 @@
 					"Defs3": 'models/svg/tests/testDefs/Wave-defs.svg',
 					"Defs4": 'models/svg/tests/testDefs/defs4.svg',
 					"Defs5": 'models/svg/tests/testDefs/defs5.svg',
+					"Style CSS inside defs": 'models/svg/style-css-inside-defs.svg',
 					"Multiple CSS classes": 'models/svg/multiple-css-classes.svg',
 					"Zero Radius": 'models/svg/zero-radius.svg'
 
