--- a/examples/webgl_interactive_cubes_gpu.html
+++ b/examples/webgl_interactive_cubes_gpu.html
@@ -222,17 +222,25 @@
 
 				//read the pixel
 
-				renderer.readRenderTargetPixels( pickingTexture, 0, 0, 1, 1, pixelBuffer );
+				if ( renderer.capabilities.isWebGL2 ) {
+					renderer.readRenderTargetPixelsAsync( pickingTexture, 0, 0, 1, 1, pixelBuffer )
+						.then( () => processPick( pixelBuffer ) );
+				} else {
+					renderer.readRenderTargetPixels( pickingTexture, 0, 0, 1, 1, pixelBuffer );
+					processPick( pixelBuffer );
+				}
 
+			}
+
+			function processPick( pixelBuffer ) {
+				
 				//interpret the pixel as an ID
-
 				const id = ( pixelBuffer[ 0 ] << 16 ) | ( pixelBuffer[ 1 ] << 8 ) | ( pixelBuffer[ 2 ] );
 				const data = pickingData[ id ];
 
 				if ( data ) {
 
 					//move our highlightBox so that it surrounds the picked object
-
 					if ( data.position && data.rotation && data.scale ) {
 
 						highlightBox.position.copy( data.position );
