--- a/examples/webgl_nodes_loader_gltf_transmission.html
+++ b/examples/webgl_nodes_loader_gltf_transmission.html
@@ -31,7 +31,7 @@
 
 			import * as THREE from 'three';
 
-			import { NodeMaterial, normalWorld, texture, uv, add, mul, vec2, checker, timerLocal } from 'three-nodes/Nodes.js';
+			import { NodeMaterial, float, texture, uv, add, mul, vec2, checker, timerLocal } from 'three-nodes/Nodes.js';
 
 			import { nodeFrame } from './jsm/renderers/webgl/nodes/WebGLNodes.js';
 
@@ -82,12 +82,11 @@
 
 								if ( material && material.transmission > 0 ) {
 
-									const checkerNode = checker( mul( add( uv(), vec2( 0, timerLocal( - .05 ) ) ), 20 ) );
+									const checkerNode = checker( mul( add( uv(), vec2( 0, timerLocal( - .05 ) ) ), 7 ) );
 
 									const nodeMaterial = NodeMaterial.fromMaterial( material );
-									nodeMaterial.colorNode = normalWorld;
-									nodeMaterial.transmissionNode = normalWorld.y;
-									nodeMaterial.iorNode = add( .7, mul( normalWorld.y, .4 ) );
+									nodeMaterial.transmissionNode = float( 1 );
+									nodeMaterial.iorNode = float( 1.5 );
 									nodeMaterial.thicknessNode = mul( texture( material.thicknessMap ).g, checkerNode );
 									//nodeMaterial.attenuationDistanceNode;
 									//nodeMaterial.attenuationColorNode;
