--- a/examples/webgl_nodes_loader_gltf_transmission.html
+++ b/examples/webgl_nodes_loader_gltf_transmission.html
@@ -31,7 +31,7 @@
 
 			import * as THREE from 'three';
 
-			import { NodeMaterial, float, texture, uv, add, mul, vec2, checker, timerLocal } from 'three-nodes/Nodes.js';
+			import { NodeMaterial, float, texture, mul } from 'three-nodes/Nodes.js';
 
 			import { nodeFrame } from './jsm/renderers/webgl/nodes/WebGLNodes.js';
 
@@ -82,12 +82,10 @@
 
 								if ( material && material.transmission > 0 ) {
 
-									const checkerNode = checker( mul( add( uv(), vec2( 0, timerLocal( - .05 ) ) ), 7 ) );
-
 									const nodeMaterial = NodeMaterial.fromMaterial( material );
 									nodeMaterial.transmissionNode = float( 1 );
 									nodeMaterial.iorNode = float( 1.5 );
-									nodeMaterial.thicknessNode = mul( texture( material.thicknessMap ).g, checkerNode );
+									nodeMaterial.thicknessNode = mul( texture( material.thicknessMap ).g, 0.1 );
 									//nodeMaterial.attenuationDistanceNode;
 									//nodeMaterial.attenuationColorNode;
 
