--- a/examples/css2d_label.html
+++ b/examples/css2d_label.html
@@ -207,7 +207,7 @@
 				moon.position.set( Math.sin( elapsed ) * 5, 0, Math.cos( elapsed ) * 5 );
 
 				renderer.render( scene, camera );
-				labelRenderer.render( scene, camera );
+				labelRenderer.render( scene, camera, true );
 
 			}
 
