--- a/examples/css3d_orthographic.html
+++ b/examples/css3d_orthographic.html
@@ -155,7 +155,7 @@
 				requestAnimationFrame( animate );
 
 				renderer.render( scene, camera );
-				renderer2.render( scene2, camera );
+				renderer2.render( scene2, camera, true );
 
 			}
 
