--- a/examples/webgl_loader_pdb.html
+++ b/examples/webgl_loader_pdb.html
@@ -259,7 +259,7 @@
 			function render() {
 
 				renderer.render( scene, camera );
-				labelRenderer.render( scene, camera );
+				labelRenderer.render( scene, camera, true );
 
 			}
 
