--- a/examples/webgl_nodes_materials_instance_uniform.html
+++ b/examples/webgl_nodes_materials_instance_uniform.html
@@ -19,7 +19,7 @@
 			{
 				"imports": {
 					"three": "../build/three.module.js",
-					"three-nodes/": "./jsm/nodes/"
+					"three/nodes": "./jsm/nodes/Nodes.js"
 				}
 			}
 		</script>
@@ -27,8 +27,7 @@
 		<script type="module">
 
 			import * as THREE from 'three';
-
-			import { MeshStandardNodeMaterial, Node, NodeUpdateType, uniform, cubeTexture, add, mul } from 'three-nodes/Nodes.js';
+			import { MeshStandardNodeMaterial, Node, NodeUpdateType, uniform, cubeTexture, add, mul } from 'three/nodes';
 
 			import Stats from './jsm/libs/stats.module.js';
 
