--- a/examples/webgl_decals.html
+++ b/examples/webgl_decals.html
@@ -88,7 +88,8 @@
 				}
 			};
 
-			window.addEventListener( 'load', init );
+			init();
+			animate();
 
 			function init() {
 
@@ -221,9 +222,6 @@
 				gui.add( params, 'rotate' );
 				gui.add( params, 'clear' );
 				gui.open();
-
-				onWindowResize();
-				animate();
 
 			}
 
